my eyes suffer less with 11pt and CM font

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1,4 +1,4 @@
-\documentclass[final,3p,times,pdflatex]{elsarticle}
+\documentclass[final,3p,11pt,pdflatex]{elsarticle}
 \usepackage[utf8x]{inputenc}      % input font encoding
 \usepackage{amsmath,amssymb}
 \usepackage[T1]{fontenc}          % output font encoding
