--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -41,6 +41,7 @@ bookmarks=true, linktocpage]{hyperref}
 \newcommand{\unity}{\mathbf{1}}
 \newcommand{\figref}[1]{\figurename~\ref{#1}}
 \newcommand{\secref}[1]{Sec.~\ref{#1}}
+\DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\re}{Re}
 \DeclareMathOperator{\im}{Im}
@@ -919,10 +920,14 @@ model.  In the MSSM one has for instance
 \subsubsection{Calculation of the Yukawa couplings $y_f(M_Z)$}
 \label{sec:calculation-of-yukawa-couplings}
 
-At the low-scale constraint the expressions for the Yukawa coupling
-matrices $y_f(M_Z)$ are calculated from the tree-level mass matrices
-of the SM-fermions $m_u$, $m_d$, $m_e$.  In the MSSM, for example,
-these relations read
+At the low-scale the \DRbar\ Yukawa coupling matrices
+$y_f^{\text{\DRbar}}(M_Z)$ ($f=u,d,e$) in the susy model are
+calculated automatically if the user has set $y_f$ to the value
+\code{Automatic} in the \fs model file.  This is done for example in
+the MSSM model file in \secref{Sec:modfile}.  In this case \fs
+expresses the Yukawa couplings in terms of the \DRbar\ fermion mass
+matrices $m_u$, $m_d$, $m_e$.  In the MSSM, for example, these
+relations read
 %
 \begin{align}
   y_u^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{u}^T}{v_u} , &
@@ -930,53 +935,39 @@ these relations read
   y_e^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{e}^T}{v_d}.
 \end{align}
 %
-At the low-scale the fermion mass matrices are composed as
+The fermion mass matrices are composed as
 %
 \begin{align}
-  m_u =
-  \begin{pmatrix}
-    m_{u}^{\userinput} & 0 & 0 \\
-    0 & m_{c}^{\userinput} & 0 \\
-    0 & 0 & m_{t,\text{susy}}^{\text{\DRbar}}(M_Z)
-  \end{pmatrix} ,\\
-  m_d =
-  \begin{pmatrix}
-    m_{d}^{\userinput} & 0 & 0 \\
-    0 & m_{s}^{\userinput} & 0 \\
-    0 & 0 & m_{b,\text{susy}}^{\text{\DRbar}}(M_Z)
-  \end{pmatrix} ,\\
-  m_e =
-  \begin{pmatrix}
-    m_{e}^{\userinput} & 0 & \\
-    0 & m_{\mu}^{\userinput} & 0 \\
-    0 & 0 & m_{\tau,\text{susy}}^{\text{\DRbar}}(M_Z)
-  \end{pmatrix},
+  m_u = \diag(m_{u}^{\userinput}, m_{c}^{\userinput}, m_{t,\text{susy}}^{\text{\DRbar}}(M_Z)) ,\\
+  m_d = \diag(m_{d}^{\userinput}, m_{s}^{\userinput}, m_{b,\text{susy}}^{\text{\DRbar}}(M_Z)) ,\\
+  m_e = \diag(m_{e}^{\userinput}, m_{\mu}^{\userinput}, m_{\tau,\text{susy}}^{\text{\DRbar}}(M_Z)),
 \end{align}
 %
-where $m_{u,c,d,s,e,\mu}^{\userinput}$ are read from the \code{Block
-  SMINPUTS} of the SLHA input file \cite{Skands:2003cj}.  The 3rd
+where $m_{u,c,d,s,e,\mu}^{\userinput}$ are read from the
+\code{SMINPUTS} block of the SLHA input file \cite{Skands:2003cj}.
+The CKM mixing matrix is currently assumed to be diagonal.  The 3rd
 generation quark masses are calculated in the \DRbar scheme from the
 SLHA user input quantities $m_t^\text{pole}$,
-$m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$,
+$m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$ and
 $m_{\tau,\text{SM}}^{\text{\MSbar}}(M_Z)$ \cite{Skands:2003cj}.  In
-detail, the top quark \DRbar mass is calculated via
+detail, the top quark \DRbar mass is calculated as
 %
 \begin{align}
   \begin{split}
     m_{t,\text{susy}}^{\text{\DRbar}}(\mu) &= m_t^\text{pole} +
-    \re\Sigma_{tt}^{S,\text{heavy}}(m_t^\text{pole}) \\
+    \re\Sigma_{t}^{S,\text{heavy}}(m_t^\text{pole}) \\
     &\phantom{=\;} + m_t^\text{pole}
-    \left[ \re\Sigma_{tt}^{L,\text{heavy}}(m_t^\text{pole}) +
-      \re\Sigma_{tt}^{R,\text{heavy}}(m_t^\text{pole}) + \Delta
+    \left[ \re\Sigma_{t}^{L,\text{heavy}}(m_t^\text{pole}) +
+      \re\Sigma_{t}^{R,\text{heavy}}(m_t^\text{pole}) + \Delta
       m_t^{(1),\text{qcd}} + \Delta m_t^{(2),\text{qcd}} \right] ,
   \end{split}
 \end{align}
 %
-where the $\Sigma_{ff}^\text{heavy}$ denotes the self-energy of
-fermion $f$ without the Standard Model contributions.  The appearing
-QCD corrections $\Delta m_t^{(1),\text{qcd}}$ and $\Delta
-m_t^{(2),\text{qcd}}$ are taken from
-\cite[Eq.\ (58),(61)]{Bednyakov:2002sf} and read
+where the $\Sigma_{f}^\text{heavy}$ is the self-energy of fermion $f$
+without the Standard Model contributions.  The labels $L,R,S$ denote
+the left-, right- and non-polarized part of the self-energy.  The
+appearing QCD corrections $\Delta m_t^{(1),\text{qcd}}$ and $\Delta
+m_t^{(2),\text{qcd}}$ are taken from \cite{Bednyakov:2002sf} and read
 %
 \begin{align}
   \Delta m_t^{(1),\text{qcd}} &= -\frac{g_3^2 \left(5-3 \log\left(\frac{m_t^2}{\mu^2}\right)\right)}{12 \pi^2},\\
@@ -990,44 +981,41 @@ m_t^{(2),\text{qcd}}$ are taken from
   \end{split}
 \end{align}
 %
-The \DRbar mass of the bottom quark is calculated via
+The \DRbar mass of the bottom quark is calculated as
 \cite{Baer:2002ek,Skands:2003cj}
 %
 \begin{align}
   m_{b,\text{susy}}^{\text{\DRbar}}(\mu) &=
   \frac{m_{b,\text{SM}}^{\text{\DRbar}}(\mu)}{1 -
-    \re\Sigma_{bb}^{S,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar})/m_b
-    - \re\Sigma_{bb}^{L,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar}) -
-    \re\Sigma_{bb}^{R,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar})} ,\\
+    \re\Sigma_{b}^{S,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar})/m_b
+    - \re\Sigma_{b}^{L,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar}) -
+    \re\Sigma_{b}^{R,\text{heavy}}(m_{b,\text{SM}}^\text{\MSbar})} ,\\
   m_{b,\text{SM}}^{\text{\DRbar}}(\mu) &=
   m_{b,\text{SM}}^{\text{\MSbar}}(\mu) \left(1 - \frac{\alpha_s}{3
       \pi} - \frac{23}{72} \frac{\alpha_s^2}{\pi^2} + \frac{3
-      g_2^2}{128 \pi^2} + \frac{13 g_Y^2}{1152 \pi^2}\right) ,
+      g_2^2}{128 \pi^2} + \frac{13 g_Y^2}{1152 \pi^2}\right) .
 \end{align}
 %
-where $m_{b,\text{SM}}^{\text{\MSbar}}(M_Z)$ is user input.  The
-\DRbar mass of the $\tau$ is calculated via
+The \DRbar mass of the $\tau$ is calculated as
 %
 \begin{align}
   \begin{split}
     m_{\tau,\text{susy}}^{\text{\DRbar}}(\mu) &=
     m_{\tau,\text{SM}}^{\text{\DRbar}}(\mu) +
-    \re\Sigma_{\tau\tau}^{S,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar}) \\
+    \re\Sigma_{\tau}^{S,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar}) \\
     &\phantom{=\;} + m_{\tau,\text{SM}}^{\text{\DRbar}}(\mu) \left[
-      \re\Sigma_{\tau\tau}^{L,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar})
+      \re\Sigma_{\tau}^{L,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar})
       +
-      \re\Sigma_{\tau\tau}^{R,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar})
+      \re\Sigma_{\tau}^{R,\text{heavy}}(m_{\tau,\text{SM}}^\text{\MSbar})
     \right] ,
   \end{split}\\
   m_{\tau,\text{SM}}^{\text{\DRbar}}(\mu) &= m_{\tau,\text{SM}}^{\text{\MSbar}}(\mu)
-  \left(1 - 3 \frac{g_Y^2 - g_2^2}{128 \pi^2}\right),
+  \left(1 - 3 \frac{g_Y^2 - g_2^2}{128 \pi^2}\right).
 \end{align}
 %
-where $m_{\tau,\text{SM}}^{\text{\MSbar}}(M_Z)$ is user input.  To
-convert the fermion masses from the \MSbar to the \DRbar scheme the
-Yukawa coupling conversion from \cite[Eq.~(19)]{Skands:2003cj} was
-used and it was assumed that the VEV is already given in the \DRbar
-scheme.
+To convert the fermion masses from the \MSbar to the \DRbar scheme the
+Yukawa coupling conversion from \cite[Eq.~(19)]{Skands:2003cj} is used
+and it is assumed that the VEV is defined in the \DRbar scheme.
 
 \subsubsection{Electroweak symmetry breaking}
 \label{sec:ewsb}
@@ -1041,7 +1029,7 @@ formulated as
 \end{align}
 %
 where $V^\text{tree}$ is the tree-level Higgs potential, $v_i$ is the
-VEVs corresponding to the Higgs field $H_i$ and $t_i$ is the one-loop
+VEVs corresponding to the Higgs fields $H_i$ and $t_i$ is the one-loop
 tadpole diagram of $H_i$.
 
 The electroweak symmetry breaking conditions
@@ -1056,7 +1044,8 @@ For example in the MSSM \fs expresses \eqref{eq:one-loop-ewsb-eq} as
 the function
 %
 \begin{lstlisting}[language=C++]
-int MSSM<Two_scale>::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* f)
+int MSSM<Two_scale>::tadpole_equations(const gsl_vector* x, void* params,
+                                       gsl_vector* f)
 {
    ...
 
@@ -1088,11 +1077,11 @@ int MSSM<Two_scale>::tadpole_equations(const gsl_vector* x, void* params, gsl_ve
 }
 \end{lstlisting}
 %
-Here \code{x} is the vector of EWSB output parameters
-(\code{EWSBOutputParameters}) and \code{f} is a vector which contains
+Here \code{x} is the vector of EWSB output parameters (defined via
+\code{EWSBOutputParameters}) and \code{f} is a vector which contains
 the one-loop EWSB eqs.\ \eqref{eq:one-loop-ewsb-eq}.  This
 \code{tadpole_equations()} function is called inside of
-\code{MSSM<Two_scale>::solve_ewsb_iteratively_with} then via
+\code{MSSM<Two_scale>::solve_ewsb_iteratively_with} then as
 %
 \begin{lstlisting}[language=C++]
 // initial guess
@@ -1113,27 +1102,29 @@ root_finder.find_root(x_init);
 \end{lstlisting}
 
 If higher accuracy is required additional routines with higher order
-corrections can be added in a very simple way.  For example in the
-MSSM by default \fs adds two loop Higgs FORTRAN routines supplied by
-P.~Slavich from \cite{slavich-degrassi} to add two loop corrections of
-$\oatas$, $\oabas$, $\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and
-$\oatab$ as follows...  Something similar is done for the NMSSM, but
-in this case the NMSSM $\oatas$, $\oabas$ pieces come from
-\cite{Degrassi:2009yq}.  Corrections from other sources can be added
-to the generated code by...
+corrections can be added by setting \code{UseHiggs2LoopMSSM = True;}
+in the model file.  For example in the MSSM by default \fs adds two
+two-loop Higgs FORTRAN routines supplied by P.~Slavich from
+\cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}
+to add two loop corrections of $\oatas$, $\oabas$, $\oatq$,
+$\oabatau$, $\oabq$, $\oatauq$ and $\oatab$.  In the NMSSM
+contributions of the order $\oatas$, $\oabas$ \cite{Degrassi:2009yq}
+can be added by setting \code{UseHiggs2LoopNMSSM = True;} in the model
+file.
 
 \subsection{Tree-level spectrum}
-The tree-level $\overline{DR}$ masses are calculated by diagonalizing
-the mass matrices returned from \code{SARAH`MassMatrix[]}.  The
-numerical singular value decomposition is performed by the Eigen
-library routine \code{Eigen::JacobiSVD} for matrices with less than
-four rows and columns, and the Lapack routines \code{zgesvd},
-\code{dgesvd} for larger matrices.  For the other types of
-diagonalization, \code{Eigen::SelfAdjointEigenSolver} from Eigen is
-used regardless of the matrix size.
+The tree-level \DRbar masses are calculated by diagonalizing the mass
+matrices returned from \code{SARAH`MassMatrix[]}.  The numerical
+singular value decomposition is performed by the Eigen library routine
+\code{Eigen::JacobiSVD} for matrices with less than four rows and
+columns, and the Lapack routines \code{zgesvd}, \code{dgesvd} for
+larger matrices.  For the other types of diagonalization,
+\code{Eigen::SelfAdjointEigenSolver} from Eigen is used regardless of
+the matrix size.
 
-The mass matrix $M^2$ for real scalar fiels $\phi_i$ is diagonalized
-with an orthogonal matrix $O$ via
+\fs uses the following conventions for the diagonalization: A mass
+matrix $M^2$ for real scalar fiels $\phi_i$ is diagonalized with an
+orthogonal matrix $O$ as
 %
 \begin{align}
   \Lagr_{m,\text{real scalar}}
@@ -1190,59 +1181,80 @@ where we're again chosing the phases of $U$ and $V$ such that all mass
 eigenvalues are positive.
 
 \subsection{Two-scale fixed point iteration}
-The default two-scale RG solver uses above beta functions and boundary
-conditions to find the full set of $\overline{DR}$ masses in the model
-consistent with all constraints.  It does so by iterating between the
-scales of all boundary conditions, applying the constraints and
-checking for convergence.  This approach is decribed in
-\cite{Barger:1993gh} for the MSSM and is widely implemented in SUSY
-spectrum generators.
+
+The $\beta$-functions for the model parameters together with the
+boundary conditions for a boundary value problem.  The default
+two-scale RG solver tries to find the full set of model parameters
+consistent with all constraints at all scales.  It does so by running
+iteratively between the scales of all boundary conditions, imposing
+the constraints and checking for convergence after each iteration.
+This approach is decribed in \cite{Barger:1993gh} for the MSSM and is
+widely implemented in SUSY spectrum generators.
 
 The in more detail the two-scale algorithm used in \fs works as
-follows (see \figurename~\ref{fig:two-scale-algorithm}):
+follows, see \figref{fig:two-scale-algorithm}:
 %
-\\Initial guess:
+\subparagraph{Initial guess:} The RG solver starts to guess all model
+parameters at the low-scale.
+%
 \begin{enumerate}
-\item Guess gauge couplings $g_{1,2,3}$ at $m_Z$
-\item Apply user-defined low-scale constraint (\code{LowScaleInput})
-\item Guess Yukawa couplings $y_{u,d,e}$ at $m_Z$
-\item Run model to the high-scale (\code{HighScaleFirstGuess})
-\item Apply high-scale constraint (\code{HighScaleInput})
-\item Run model to the low-scale (\code{LowScaleFirstGuess})
-\item Solve EWSB eqs.\ at the tree-level
-\item Calculate \DRbar\ masses
+\item At the $M_Z$ scale the susy model gauge couplings $g_{1,2,3}$
+  are set to the known Standard Model values (ignoring threshold
+  corrections).
+\item Then, the user-defined low-scale boundary conditions (defined in
+  \code{LowScaleInput}) are imposed.
+\item The Yukawa couplings $y_{u,d,e}$ of the susy model are set to
+  the known Standard Model Yukawa couplings.
+\item The susy parameters are run to the user-supplied first guess of
+  the high-scale (\code{HighScaleFirstGuess}).
+\item The high-scale boundary condition is imposed (defined in
+  \code{HighScaleInput}).
+\item All model parameters are run to the first guess of the low-scale
+  (\code{LowScaleFirstGuess})
+\item The EWSB eqs.\ are solved at the tree-level.
+\item The \DRbar\ mass spectrum is calculated.
 \end{enumerate}
 %
-Solving the renormalization group equations:
+At this point all model parameters are set to some initial values and
+a first estimation of the \DRbar\ mass spectrum is known.  Now the
+actual iteration starts
+%
+\subparagraph{Fixed-point iteration:}
+%
 \begin{enumerate}
-\item \label{rge-step-one} Run model to the low-scale (\code{LowScale})
+\item \label{rge-step-one} All model parameters are run to the
+  low-scale (\code{LowScale})
   \begin{enumerate}
-  \item Calculate \DRbar\ masses
-  \item Recalculate low-scale
-  \item Calculate \DRbar\ gauge and Yukawa couplings $g_{1,2,3}$, $y_{u,d,e}$
-  \item Apply user-defined low-scale constraint (\code{LowScaleInput})
+  \item The \DRbar\ mass spectrum is calculated.
+  \item The low-scale is recalculated.
+  \item The \DRbar\ gauge and Yukawa couplings $g_{1,2,3}(M_Z)$,
+    $y_{u,d,e}(M_Z)$ of the susy model are calculated using threshold
+    corrections.
+  \item The user-defined low-scale constraint is imposed
+    (\code{LowScaleInput})
   \end{enumerate}
-\item Run model to the high-scale (\code{HighScale})
+\item Run all model parameters to the high-scale (\code{HighScale})
   \begin{enumerate}
-  \item Recalculate high-scale
-  \item Apply high-scale constraint (\code{HighScaleInput})
+  \item Recalculate the high-scale
+  \item Apply the high-scale constraint (\code{HighScaleInput})
   \end{enumerate}
-\item Run model to the susy-scale (\code{SUSYScale})
+\item Run model parameters to the susy-scale (\code{SUSYScale})
   \begin{enumerate}
-  \item Calculate \DRbar\ masses
-  \item Recalculate low-scale
-  \item Apply susy-scale constraint (\code{SUSYScaleInput})
-  \item Solve EWSB eqs.\ at the one-loop level
+  \item Calculate the \DRbar\ mass spectrum
+  \item Recalculate the susy-scale
+  \item Apply the susy-scale constraint (\code{SUSYScaleInput})
+  \item Solve the EWSB eqs.\ at the loop level
   \end{enumerate}
 \item If not converged yet, goto \ref{rge-step-one}
 \end{enumerate}
 %
-Calculating the particle spectrum:
-\begin{enumerate}
-\item Run model to the susy-scale
-\item Calculate the pole masses
-\item Run model to the parameter output scale (SLHA block MODSEL 12)
-\end{enumerate}
+If the fixed-point iteration has converged, all \DRbar\ model
+parameters are known at all scales between \code{LowScale} and
+\code{HighScale}.  In this case all model parameters are run to the
+susy-scale and the pole-mass spectrum is calculated.  If the user has
+chosen a specific output scale for the running \DRbar\ model
+parameters by setting entry $12$ in block \code{MODSEL} in the SLHA
+input file, all model parameters are run to the defined output scale.
 %
 \begin{figure}[tbh]
   \centering
@@ -1268,93 +1280,6 @@ Calculating the particle spectrum:
   \caption{Iterative two-scale algorithm to calculate the spectrum.}
   \label{fig:two-scale-algorithm}
 \end{figure}
-
-\begin{figure}[tb]
-  \centering
-  \tikzumlset{fill class=white}
-  \begin{tikzpicture}
-    \umlclass[x=0, y=0, type=abstract]{Beta\_function}{
-      -- scale : double\\
-      -- loops : unsigned\\
-      -- numPars : unsigned
-    }{
-      + \umlvirt{get() : const Eigen::ArrayXd} \\
-      + \umlvirt{set(v : const Eigen::ArrayXd\&) : void}\\
-      + \umlvirt{beta() : Eigen::ArrayXd}\\
-      + run\_to(scale : double, eps : double) : void\\
-    }
-    \umlclass[x=8, y=-12, template={T}]{MSSM}{}{}
-    \umlclass[x=8, y=-8, type=abstract]{Two\_scale\_model}{}{
-      + \umlvirt{calculate\_spectrum() : void}\\
-      + \umlvirt{run\_to(scale : double, eps : double) : void}\\
-      + \umlvirt{set\_precision(precision : double) : void}
-    }
-    \umlclass[x=0, y=-4]{MSSM\_susy\_parameters}{}{
-      + get() : const Eigen::ArrayXd \\
-      + set(v : const Eigen::ArrayXd\&) : void\\
-      + beta() : Eigen::ArrayXd
-    }
-    \umlclass[x=0, y=-8]{MSSM\_soft\_parameters}{}{
-      + get() : const Eigen::ArrayXd \\
-      + set(v : const Eigen::ArrayXd\&) : void\\
-      + beta() : Eigen::ArrayXd
-    }
-    \umlclass[x=0, y=-12]{MSSM$<$Two\_scale$>$}{}{
-      + calculate\_spectrum() : void\\
-      + run\_to(scale : double, eps : double) : void\\
-      + set\_precision(precision : double) : void
-    }
-   \umlinherit{MSSM\_susy\_parameters}{Beta\_function}
-   \umlinherit{MSSM\_soft\_parameters}{MSSM\_susy\_parameters}
-   \umlinherit{MSSM$<$Two\_scale$>$}{MSSM\_soft\_parameters}
-   \umlinherit{MSSM$<$Two\_scale$>$}{Two\_scale\_model}
-   \umldep[arg1={$<<$bind$>>$}, mult1={T $\rightarrow$ Two\_scale}, pos1=0.5]{MSSM$<$Two\_scale$>$}{MSSM}
-  \end{tikzpicture}
-  \caption{Two-scale model class hierarchy}
-  \label{fig:two-scale-model-class-hierarchy}
-\end{figure}
-
-\begin{figure}[tb]
-  \centering
-  \tikzumlset{fill class=white}
-  \begin{tikzpicture}
-    \umlclass[x=0, y=0, type=abstract]{Two\_scale\_model}{}{
-      + \umlvirt{calculate\_spectrum() : void}\\
-      + \umlvirt{run\_to(scale : double, eps : double) : void}\\
-      + \umlvirt{set\_precision(precision : double) : void}
-    }
-    \umlclass[x=0, y=-4]{RGFlow$<$Two\_scale$>$}{}{
-      + solve() : void
-    }
-    \umlclass[x=8, y=0]{Constraint$<$Two\_scale$>$}{}{
-      + \umlvirt{apply() : void}\\
-      + \umlvirt{get\_scale() : double}\\
-      + \umlvirt{set\_model(model : Two\_scale\_model*) : void}
-    }
-    \umlclass[x=8, y=4, template={T}]{Constraint}{}{}
-    \umlclass[x=0, y=-7]{Initial\_guesser$<$Two\_scale$>$}{}{
-      + \umlvirt{guess() : void}
-    }
-    \umlclass[x=0, y=-11, template={T}]{Initial\_guesser}{}{}
-    \umlclass[x=8, y=-7]{Convergence\_tester$<$Two\_scale$>$}{}{
-      + \umlvirt{accuracy\_goal\_reached() : bool}\\
-      + \umlvirt{max\_iterations() : unsigned}
-    }
-    \umlclass[x=8, y=-11, template={T}]{Convergence\_tester}{}{}
-    \umlclass[x=8, y=-4, template={T}]{RGFlow}{}{}
-    \umldep[arg1={$<<$bind$>>$}, mult1={T $\rightarrow$ Two\_scale}, pos1=0.5]{RGFlow$<$Two\_scale$>$}{RGFlow}
-    \umldep[mult1=1..*]{RGFlow$<$Two\_scale$>$}{Two\_scale\_model}
-    \umldep[mult1=1..*]{RGFlow$<$Two\_scale$>$}{Constraint$<$Two\_scale$>$}
-    \umldep{RGFlow$<$Two\_scale$>$}{Initial\_guesser$<$Two\_scale$>$}
-    \umldep{RGFlow$<$Two\_scale$>$}{Convergence\_tester$<$Two\_scale$>$}
-    \umldep[mult1={$<<$bind$>>$}, arg1={T $\rightarrow$ Two\_scale}, pos1=0.5]{Initial\_guesser$<$Two\_scale$>$}{Initial\_guesser}
-    \umldep[mult1={$<<$bind$>>$}, arg1={T $\rightarrow$ Two\_scale}, pos1=0.5]{Convergence\_tester$<$Two\_scale$>$}{Convergence\_tester}
-    \umldep[arg1={$<<$bind$>>$}, mult1={T $\rightarrow$ Two\_scale}, pos1=0.5]{Constraint$<$Two\_scale$>$}{Constraint}
-  \end{tikzpicture}
-  \caption{Two-scale renormalization group solver class hierarchy}
-  \label{fig:two-scale-rgflow-class-hierarchy}
-\end{figure}
-{\color{red} copied and pasted from latest manual -- not sure how best to maintain this, could split maual up into tiny bits, but we may also want some differences?}
 
 \subsection{Pole masses}
 After the solver routine has finished and convergence has been
@@ -1397,49 +1322,54 @@ Since the one-loop mass matrices depend on $p$, an iterative procedure
 must be used.  \fs provides three different methods with different
 precision and execution speed to determine the mass eigenvalues:
 
-\code{LowDiagonalizationPrecision}: This option provides the lowest
-precision but is also the fastest one.  Here the one-loop mass matrix
-$m_{f,1L}^\text{low}$ is calculated exactly once as
+\begin{itemize}
+\item \code{LowDiagonalizationPrecision}: This option provides the
+  lowest precision but is also the fastest one.  Here the one-loop
+  mass matrix $m_{f,1L}^\text{low}$ is calculated exactly once as
 %
-\begin{align}
-  \forall i,j: (m_{f,1L}^\text{low})_{ij} = (m_{f,1L}(p^2 = m_{f_i} m_{f_j}))_{ij} ,
-\end{align}
+  \begin{align}
+    \forall i,j: (m_{f,1L}^\text{low})_{ij} = (m_{f,1L}(p^2 = m_{f_i}
+    m_{f_j}))_{ij} ,
+  \end{align}
 %
-where $m_{f_i}$ is the $i$th mass eigenvalue of the tree-level mass
-matrix $m_f$.  Afterwards $m_{f,1L}^\text{low}$ is diagonalized and
-the eigenvalues are interpreted as pole masses $m_{f_i}^\pole$.
+  where $m_{f_i}$ is the $i$th mass eigenvalue of the tree-level mass
+  matrix $m_f$.  Afterwards $m_{f,1L}^\text{low}$ is diagonalized and
+  the eigenvalues are interpreted as pole masses $m_{f_i}^\pole$.
 
-\code{MediumDiagonalizationPrecision} (default): This option provides
-calculation with medium precision with a medium execution time.  Here
-the one-loop mass matrix $m_{f,1L}^\text{medium}$ is calculated $n$
-times as
+\item \code{MediumDiagonalizationPrecision} (default): This option
+  provides calculation with medium precision with a medium execution
+  time.  Here the one-loop mass matrix $m_{f,1L}^\text{medium}$ is
+  calculated $n$ times as
 %
-\begin{align}
-  (m_{f,1L}^\text{medium})_{ij}^{(k)} = (m_{f,1L}(p^2 = m_{f_k}^2))_{ij} ,
-  \qquad k = 1,\ldots,n ,
-\end{align}
+  \begin{align}
+    (m_{f,1L}^\text{medium})_{ij}^{(k)} = (m_{f,1L}(p^2 =
+    m_{f_k}^2))_{ij} , \qquad k = 1,\ldots,n ,
+  \end{align}
 %
-where $m_{f_k}$ is the $k$th mass eigenvalue of the tree-level mass
-matrix $m_f$.  Afterwards, each mass matrix
-$(m_{f,1L}^\text{medium})^{(k)}$ is diagonalized and the $k$th
-eigenvalue is interpreted as pole mass $m_{f_k}^\pole$.
+  where $m_{f_k}$ is the $k$th mass eigenvalue of the tree-level mass
+  matrix $m_f$.  Afterwards, each mass matrix
+  $(m_{f,1L}^\text{medium})^{(k)}$ is diagonalized and the $k$th
+  eigenvalue is interpreted as pole mass $m_{f_k}^\pole$.
 
-\code{HighDiagonalizationPrecision}: This option provides
-diagonalization with highest precision, but has also the highest
-execution time.  Here the one-loop mass matrix $m_{f,1L}^\text{high}$
-is diagonalized $n$ times, as in the case of
-\code{MediumDiagonalizationPrecision}, resulting in $n$ pole masses
-$m_{f_k}^\pole$ ($k = 1,\ldots,n$).  Afterwards, the diagonalization
-is repeated, this time using the calculated pole masses
-$m_{f_k}^\pole$ for the momentum calculation $p^2 =
-(m_{f_k}^\pole)^2$.  The iteration stops until convergence is reached.
+\item \code{HighDiagonalizationPrecision}: This option provides
+  diagonalization with highest precision, but has also the highest
+  execution time.  Here the one-loop mass matrix
+  $m_{f,1L}^\text{high}$ is diagonalized $n$ times, as in the case of
+  \code{MediumDiagonalizationPrecision}, resulting in $n$ pole masses
+  $m_{f_k}^\pole$ ($k = 1,\ldots,n$).  Afterwards, the diagonalization
+  is repeated, this time using the calculated pole masses
+  $m_{f_k}^\pole$ for the momentum calculation $p^2 =
+  (m_{f_k}^\pole)^2$.  The iteration stops until convergence is
+  reached.
+\end{itemize}
 
 If higher accuracy is required additional routines with higher order
-corrections can be added in a very simple way. For example in the MSSM
-by default \fs adds two-loop Higgs FORTRAN routines supplied by
-P.~Slavich from \cite{slavich-degrassi} to add two loop corrections of
-$\oatas$, $\oabas$, $\oatq$, $\oabatau$, $\oabq$, $\oatauq$ and
-$\oatab$ as follows...
+corrections can be added by setting \code{UseHiggs2LoopMSSM = True;}
+in the model file. For example in the MSSM by default \fs adds
+two-loop Higgs FORTRAN routines supplied by P.~Slavich from
+\cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}
+to add two-loop corrections of $\oatas$, $\oabas$, $\oatq$,
+$\oabatau$, $\oabq$, $\oatauq$ and $\oatab$.
 
 Something similar is done for the NMSSM, but in this case the NMSSM
 $\oatas$, $\oabas$ pieces come from \cite{Degrassi:2009yq}, while for
@@ -1452,10 +1382,6 @@ the leading log two loop corrections are estimated, by generalising
 those of the MSSM or NMSSM, as has been done, for example, in the
 E$_6$SSM\cite{King:2005jy}.
 
-Corrections to other masses or further corrections to the Higgs states
-can be added very easily by...
-
-%%\section{Implementing new models}
 \section{Flexible Spectra}
 \label{Sec:Flexible}
 \subsection{Meta code}
