--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1403,77 +1403,19 @@ We compare the run-time of five different CMSSM spectrum generators:
   violation.
 \end{itemize}
 %
-FlexibleSUSY and Softsusy were compiled with g++ 4.8.0 and Intel ifort
-13.1.3 20130607.  SPheno and SPhenoMSSM were compiled with Intel ifort
+FlexibleSUSY and Softsusy are compiled with g++ 4.8.0 and Intel ifort
+13.1.3 20130607.  SPheno and SPhenoMSSM are compiled with Intel ifort
 13.1.3 20130607\footnote{We are using Intel's ifort compiler, instead
   of gfortran, because it decreases the run-time of SPheno and
   SPhenoMSSM by approximately a factor $1.5$.}.  We're generating
-$2\cot 10^{4}$ random CMSSM parameter points with $m_0\in [50,1000]$
+$2\cdot 10^{4}$ random CMSSM parameter points with $m_0\in [50,1000]$
 $m_{1/2}\in [50,1000]$, $\tan\beta\in [1,100]$, $\sign\mu\in
-\{-1,+1\}$ and $A_0\in [-1000,1000]$.  The following SLHA template
-file was used:
-%
-\begin{verbatim}
-Block MODSEL                 # Select model
-    6    0                   # flavour violation
-    1    1                   # mSUGRA
-Block SMINPUTS               # Standard Model inputs
-    1   1.279180000e+02      # alpha^(-1) SM MSbar(MZ)
-    2   1.166390000e-05      # G_Fermi
-    3   1.189000000e-01      # alpha_s(MZ) SM MSbar
-    4   9.118760000e+01      # MZ(pole)
-    5   4.200000000e+00      # mb(mb) SM MSbar
-    6   1.709000000e+02      # mtop(pole)
-    7   1.777000000e+00      # mtau(pole)
-Block SOFTSUSY               # SOFTSUSY specific inputs
-    1   1.000000000e-04      # tolerance
-    2   2                    # up-quark mixing (=1) or down (=2)
-    3   0                    # printout
-    5   1                    # 2-loop running
-    7   2                    # EWSB and Higgs mass loop order
-Block FlexibleSUSY
-    0   1.000000000e-04      # precision goal
-    1   0                    # max. iterations (0 = automatic)
-    2   0                    # algorithm (0 = two_scale, 1 = lattice)
-    3   0                    # calculate SM pole masses
-    4   1                    # pole mass loop order
-    5   1                    # EWSB loop order
-Block SPhenoInput            # SPheno specific input
-    1  -1                    # error level
-    2   1                    # SPA conventions
-    11  0                    # calculate branching ratios
-    13  0                    # include 3-Body decays
-    12  1.000E-04            # write only branching ratios larger than this value
-    31  -1                   # fixed GUT scale (-1: dynamical GUT scale)
-    32  0                    # Strict unification
-    34  1.000E-04            # Precision of mass calculation
-    35  40                   # Maximal number of iterations
-    37  1                    # Set Yukawa scheme
-    38  2                    # 1- or 2-Loop RGEs
-    50  1                    # Majorana phases: use only positive masses
-    51  0                    # Write Output in CKM basis
-    52  0                    # Write spectrum in case of tachyonic states
-    55  1                    # Calculate one loop masses
-    57  0                    # Calculate low energy constraints
-    60  0                    # Include possible, kinetic mixing
-    65  1                    # Solution tadpole equation
-    75  0                    # Write WHIZARD files
-    76  0                    # Write HiggsBounds file
-    86  0.                   # Maximal width to be counted as invisible in Higgs decays
-    510 0.                   # Write tree level values for tadpole solutions
-    515 0                    # Write parameter values at GUT scale
-    520 0.                   # Write effective Higgs couplings (HiggsBounds blocks)
-    525 0.                   # Write loop contributions to diphoton decay of Higgs
-Block MINPAR
-    1   [50..1000]           # m0(MX)
-    2   [50..1000]           # m12(MX)
-    3   [1..100]             # tan(beta)(MZ) DRbar
-    4   {-1,+1}              # sign(mu)
-    5   [-1000..1000]        # A0(MX)
-\end{verbatim}
-%
-The SLHA file was passed to each spectrum generator and the
-(wall-clock) time was measured until the program has finished.  The
+\{-1,+1\}$ and $A_0\in [-1000,1000]$.  For each point an SLHA input
+file is created by appending the values of $m_0$, $m_{1/2}$,
+$\tan\beta$, $\sign\mu$, $A_0$ in form of a \code{MINPAR} block to the
+SLHA template file given in \ref{sec:speed-test-slha-template-file}.
+The resulting SLHA input file is passed to each spectrum generator and
+the (wall-clock) time is measured until the program has finished.  The
 average run-times for three different CPU types can be found in
 \tablename~\ref{tab:run-time-comparison}.  The first column shows the
 run-time on a Intel Core2 Duo (P8600) where only one core was enabled.
@@ -1872,6 +1814,69 @@ DEFINITION[EWSB][MatterSector]=
 Comparisons against existing spectrum generators to test for deviations, e.g. the tests against MSSM and NMSSM (and E6SSM?).
 
 Comparisons against existing spectrum generators and SARAH generated spheno code for speed.
+
+\section{Speed test SLHA input file}
+\label{sec:speed-test-slha-template-file}
+%
+\begin{verbatim}
+Block MODSEL                 # Select model
+    6    0                   # flavour violation
+    1    1                   # mSUGRA
+Block SMINPUTS               # Standard Model inputs
+    1   1.279180000e+02      # alpha^(-1) SM MSbar(MZ)
+    2   1.166390000e-05      # G_Fermi
+    3   1.189000000e-01      # alpha_s(MZ) SM MSbar
+    4   9.118760000e+01      # MZ(pole)
+    5   4.200000000e+00      # mb(mb) SM MSbar
+    6   1.709000000e+02      # mtop(pole)
+    7   1.777000000e+00      # mtau(pole)
+Block SOFTSUSY               # SOFTSUSY specific inputs
+    1   1.000000000e-04      # tolerance
+    2   2                    # up-quark mixing (=1) or down (=2)
+    3   0                    # printout
+    5   1                    # 2-loop running
+    7   2                    # EWSB and Higgs mass loop order
+Block FlexibleSUSY
+    0   1.000000000e-04      # precision goal
+    1   0                    # max. iterations (0 = automatic)
+    2   0                    # algorithm (0 = two_scale, 1 = lattice)
+    3   0                    # calculate SM pole masses
+    4   1                    # pole mass loop order
+    5   1                    # EWSB loop order
+Block SPhenoInput            # SPheno specific input
+    1  -1                    # error level
+    2   1                    # SPA conventions
+    11  0                    # calculate branching ratios
+    13  0                    # include 3-Body decays
+    12  1.000E-04            # write only branching ratios larger than this value
+    31  -1                   # fixed GUT scale (-1: dynamical GUT scale)
+    32  0                    # Strict unification
+    34  1.000E-04            # Precision of mass calculation
+    35  40                   # Maximal number of iterations
+    37  1                    # Set Yukawa scheme
+    38  2                    # 1- or 2-Loop RGEs
+    50  1                    # Majorana phases: use only positive masses
+    51  0                    # Write Output in CKM basis
+    52  0                    # Write spectrum in case of tachyonic states
+    55  1                    # Calculate one loop masses
+    57  0                    # Calculate low energy constraints
+    60  0                    # Include possible, kinetic mixing
+    65  1                    # Solution tadpole equation
+    75  0                    # Write WHIZARD files
+    76  0                    # Write HiggsBounds file
+    86  0.                   # Maximal width to be counted as invisible in Higgs decays
+    510 0.                   # Write tree level values for tadpole solutions
+    515 0                    # Write parameter values at GUT scale
+    520 0.                   # Write effective Higgs couplings (HiggsBounds blocks)
+    525 0.                   # Write loop contributions to diphoton decay of Higgs
+Block MINPAR
+    1   [50..1000]           # m0(MX)
+    2   [50..1000]           # m12(MX)
+    3   [1..100]             # tan(beta)(MZ) DRbar
+    4   {-1,+1}              # sign(mu)
+    5   [-1000..1000]        # A0(MX)
+\end{verbatim}
+
 
 \begin{thebibliography}{100}
 %% %\cite{Nilles:1983ge}
