better spacing of listings

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -20,7 +20,12 @@
   breakautoindent=false,
   showspaces=false,
   showstringspaces=false,
-  frame=single}
+  frame=single,
+  abovecaptionskip=0em,
+  aboveskip=1.5em,
+  belowcaptionskip=0.5em,
+  belowskip=1em,
+}
 \usepackage[pdftitle={FlexibleSUSY --- A spectrum generator generator for supersymmetric models},
 pdfauthor={Peter Athron,Jae-hyeon Park,Dominik Stockinger,Alexander Voigt},
 pdfkeywords={FlexibleSUSY,supersymmetry,spectrum,generator,MSSM,NMSSM,E6SSM},
